--- a/.github/workflows/buildAndroidAPK.yml
+++ b/.github/workflows/buildAndroidAPK.yml
@@ -23,6 +23,8 @@ jobs:
         with:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
+        env:
+          EXPO_PUBLIC_REDIRECT_URI: ${{ secrets.EXPO_PUBLIC_REDIRECT_URI }}
 
       - name: 📦 Install dependencies
         run: yarn install
