--- a/app.json
+++ b/app.json
@@ -26,6 +26,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra":{
+      "eas": {
+        "projectId": "3db51579-3df9-4f7d-b340-c3a0aa40600f"
+      }
     }
   }
 }
