--- a/.github/workflows/buildGooglePlayStore.yml
+++ b/.github/workflows/buildGooglePlayStore.yml
@@ -28,7 +28,7 @@ jobs:
         run: yarn install
 
       - name: 🚀 Build app
-        run: eas build -p android --profile production --local --non-interactive --clear-cache --output "./apk/in42.aab"
+        run: eas build -p android --profile production --local --non-interactive --clear-cache --output "./aab/in42.aab"
         
           
 
@@ -36,4 +36,16 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: buildArtifact
-          path: ./apk/in42.aab
+          path: ./aab/in42.aab
+
+      - name: Create service_account.json
+        run: echo '${{ secrets.SERVICE_ACCOUNT_JSON }}' > service_account.json
+
+      - name: Deploy to Play store
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJson: service_account.json
+          packageName: com.mrm0lten.IN42
+          releaseFile: ./aab/in42.aab
+          track: qa
+          # whatsNewDirectory: distribution/         
