--- a/.github/workflows/buildGooglePlayStore.yml
+++ b/.github/workflows/buildGooglePlayStore.yml
@@ -46,6 +46,6 @@ jobs:
         with:
           serviceAccountJson: service_account.json
           packageName: com.mrm0lten.IN42
-          releaseFile: ./aab/in42.aab
+          releaseFiles: ./aab/in42.aab
           track: qa
           # whatsNewDirectory: distribution/         
