--- a/.github/workflows/testUpload.yml
+++ b/.github/workflows/testUpload.yml
@@ -6,9 +6,9 @@ jobs:
   Upload:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name:  https://github.com/IN42Developers/IN42/actions/runs/8040114924/artifacts/1273397220
+      - name: print Something
+        run: |
+          wget https://github.com/IN42Developers/IN42/actions/runs/8040114924/artifacts/1273397220
       - name: print Something
         run: |
           ls
