--- a/.github/workflows/testUpload.yml
+++ b/.github/workflows/testUpload.yml
@@ -13,11 +13,10 @@ jobs:
       - name: Download Artifact
         run: |
           ARTIFACT_URL="https://api.github.com/repos/IN42Developers/IN42/actions/runs/8040114924/artifacts"
-          DOWNLOAD_URL=$(curl -s -X GET -u ${{ secrets.GITHUB_USERNAME }}:${{ secrets.GITHUB_TOKEN }} "$ARTIFACT_URL" | jq -r '.artifacts[] | select(.name == "your_artifact_name") | .archive_download_url')
-          curl -s -o artifact.zip -L -u ${{ secrets.GITHUB_USERNAME }}:${{ secrets.GITHUB_TOKEN }} "$DOWNLOAD_URL"
+          DOWNLOAD_URL=$(curl -s -X GET -u mrm0lten:${{ secrets.JEAN_GITHUB_TOKEN }} "$ARTIFACT_URL" | jq -r '.artifacts[] | select(.name == "your_artifact_name") | .archive_download_url')
+          curl -s -o artifact.zip -L -u mrm0lten:${{ secrets.JEAN_GITHUB_TOKEN }} "$DOWNLOAD_URL"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
 
       - name: print Something
         run: |
