[store] new build test
[store] test

--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,7 @@
 {
   "cli": {
     "version": ">= 5.4.0",
-    "appVersionSource": "local"
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
@@ -27,7 +27,6 @@
         "EXPO_PUBLIC_REDIRECT_URI": "exp://ltn1_0g.mrm0lten.8081.exp.direct/THISISFROMEASJSON"
       },
       "android": {
-        "autoIncrement": true
       },
       "ios": {
       }
