--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.mrm0lten.IN42"
     },
     "android": {
       "adaptiveIcon": {
@@ -27,7 +28,7 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "extra":{
+    "extra": {
       "eas": {
         "projectId": "3db51579-3df9-4f7d-b340-c3a0aa40600f"
       }
