--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.18",
     "@types/react": "~18.2.14",
+    "cli": "^1.0.1",
     "dotenv": "^16.3.1",
-    "expo": "^49.0.13",
+    "expo": "^49.0.23",
     "expo-auth-session": "~5.0.2",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "n": "^9.2.1",
+    "nvm": "^0.0.4",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-dotenv": "^3.4.9",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
