--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "n": "^9.2.1",
-    "nvm": "^0.0.4",
+    "nvm": "0.0.4",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-dotenv": "^3.4.9",
