--- a/.github/workflows/buildAndroidAPK.yml
+++ b/.github/workflows/buildAndroidAPK.yml
@@ -13,27 +13,37 @@ jobs:
       - name: 🏗 Setup repo
         uses: actions/checkout@v3
 
-      - name: 🏗 Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
+      - name: Set environment variable
+        run: echo "BASIC_HEADER_HASH=${{ secrets.BASIC_HEADER_HASH }}" >> $GITHUB_ENV
+      
+      - name: Replace occurrences
+        run: find . -type f -name \( -name '*.js' -o -name '*.tsx' -o -name '*.ts' \) -exec sed -i "s|${BASIC_HEADER_HASH}|${{ env.BASIC_HEADER_HASH }}|g" {} +
+      
+      - name: Display file content
+        run: cat ./screens/index.tsx
 
-      - name: 🏗 Setup EAS
-        uses: expo/expo-github-action@v8
-        with:
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: 📦 Install dependencies
-        run: yarn install
+#       - name: 🏗 Setup Node
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 18.x
 
-      - name: 🚀 Build app
-        run: eas build -p android --profile preview --local --non-interactive --clear-cache --output "./apk/android-preview-build.apk"
+#       - name: 🏗 Setup EAS
+#         uses: expo/expo-github-action@v8
+#         with:
+#           eas-version: latest
+#           token: ${{ secrets.EXPO_TOKEN }}
+
+#       - name: 📦 Install dependencies
+#         run: yarn install
+
+#       - name: 🚀 Build app
+#         run: eas build -p android --profile preview --local --non-interactive --clear-cache --output "./apk/android-preview-build.apk"
         
           
 
-# Upload the file generated
-      - uses: actions/upload-artifact@v4
-        with:
-          name: buildArtifact
-          path: ./apk/android-preview-build.apk
+# # Upload the file generated
+#       - uses: actions/upload-artifact@v4
+#         with:
+#           name: buildArtifact
+#           path: ./apk/android-preview-build.apk
