[build apk]Update buildAndroidAPK.yml

--- a/.github/workflows/buildAndroidAPK.yml
+++ b/.github/workflows/buildAndroidAPK.yml
@@ -13,6 +13,9 @@ jobs:
       - name: 🏗 Setup repo
         uses: actions/checkout@v3
 
+      - name: find files
+        run: grep -rl "${BASIC_HEADER_HASH}" .
+        
       - name: Set environment variable
         run: echo "BASIC_HEADER_HASH=${{ secrets.BASIC_HEADER_HASH }}" >> $GITHUB_ENV
       
