--- a/.github/workflows/buildAndroidAPK.yml
+++ b/.github/workflows/buildAndroidAPK.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: find files
-        run: pwd
+        run: ls -la
         # run: grep -rl "${BASIC_HEADER_HASH}" .
         
       - name: Set environment variable
