[build apk]Update buildAndroidAPK.yml

--- a/.github/workflows/buildAndroidAPK.yml
+++ b/.github/workflows/buildAndroidAPK.yml
@@ -31,7 +31,8 @@ jobs:
           done
       
       - name: Display file content
-        run: cat ./screens/index.tsx
+        run: cat ./Utilities/apiAuthorization.js
+        # run: cat ./screens/index.tsx
 
 
 #       - name: 🏗 Setup Node
