[build apk] potentially adding deep link

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "typescript": "^5.1.3",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.1",
+    "expo-linking": "~5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
