--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "typescript": "^5.1.3",
     "zustand": "^4.4.1",
     "expo-linking": "~5.0.2",
-    "expo-dev-client": "~2.4.13"
+    "expo-dev-client": "~2.4.13",
+    "expo-build-properties": "~0.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
