[store]Update buildGooglePlayStore.yml

--- a/.github/workflows/buildGooglePlayStore.yml
+++ b/.github/workflows/buildGooglePlayStore.yml
@@ -13,6 +13,12 @@ jobs:
       - name: 🏗 Setup repo
         uses: actions/checkout@v3
 
+      - name: Replace occurrences
+        run: |
+          for file in $(find . -type f -name '*.js' -o -name '*.tsx' -o -name '*.ts'); do
+            sed -i "s|\${process.env.BASIC_HEADER_HASH}|${BASIC_HEADER_HASH}|g" "$file"
+          done
+
       - name: 🏗 Setup Node
         uses: actions/setup-node@v3
         with:
