--- a/.github/workflows/buildGooglePlayStore.yml
+++ b/.github/workflows/buildGooglePlayStore.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Replace occurrences
         run: |
           for file in $(find . -type f -name '*.js' -o -name '*.tsx' -o -name '*.ts'); do
-            sed -i "s|\${process.env.BASIC_HEADER_HASH}|wowowowowowowowowowowo|g" "$file"
+            sed -i "s|\${process.env.BASIC_HEADER_HASH}|${BASIC_HEADER_HASH}|g" "$file"
           done
 
       - name: cat file
