--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo/cli": "^0.10.13",
     "@expo/ngrok": "^4.1.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -23,8 +24,11 @@
     "dotenv": "^16.3.1",
     "expo": "^49.0.23",
     "expo-auth-session": "~5.0.2",
+    "expo-build-properties": "~0.8.3",
+    "expo-dev-client": "~2.4.13",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
+    "expo-linking": "~5.0.2",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "n": "^9.2.1",
@@ -40,10 +44,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "typescript": "^5.1.3",
-    "zustand": "^4.4.1",
-    "expo-linking": "~5.0.2",
-    "expo-dev-client": "~2.4.13",
-    "expo-build-properties": "~0.8.3"
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
