--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "n": "^9.2.1",
+    "nativewind": "^2.0.11",
     "nvm": "0.0.4",
     "react": "18.2.0",
     "react-native": "0.72.10",
@@ -47,7 +48,8 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
