--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "typescript": "^5.1.3",
