--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "expo": { 
+  "expo": {
     "name": "IN42",
     "slug": "IN42",
     "version": "0.3.0",
@@ -13,13 +13,18 @@
     },
     "scheme": "in42",
     "plugins": [
-      ["expo-build-properties", {
-        "android": {
-          "usesCleartextTraffic": true
-        },
-        "ios": {
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "usesCleartextTraffic": true
+          },
+          "ios": {}
         }
-      }]],
+      ],
+      "expo-font",
+      "expo-secure-store"
+    ],
     "assetBundlePatterns": [
       "**/*"
     ],
@@ -32,10 +37,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.mrm0lten.IN42",
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      "package": "com.mrm0lten.IN42"
     },
     "extra": {
       "eas": {
