--- a/package.json
+++ b/package.json
@@ -22,34 +22,35 @@
     "@types/react": "~18.2.14",
     "cli": "^1.0.1",
     "dotenv": "^16.3.1",
-    "expo": "^49.0.23",
-    "expo-auth-session": "~5.0.2",
-    "expo-build-properties": "~0.8.3",
-    "expo-dev-client": "~2.4.13",
-    "expo-font": "~11.4.0",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-linking": "~5.0.2",
-    "expo-secure-store": "~12.3.1",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^50.0.14",
+    "expo-auth-session": "~5.4.0",
+    "expo-build-properties": "~0.11.1",
+    "expo-dev-client": "~3.3.11",
+    "expo-font": "~11.10.3",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-linking": "~6.2.2",
+    "expo-secure-store": "~12.8.1",
+    "expo-status-bar": "~1.11.1",
     "n": "^9.2.1",
-    "nativewind": "^2.0.11",
+    "nativewind": "^4.0.1",
     "nvm": "0.0.4",
     "react": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "0.73.6",
+    "react-native-css-interop": "^0.0.34",
     "react-native-dotenv": "^3.4.9",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-progress": "^5.0.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.1.3",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.2"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
