--- a/app.json
+++ b/app.json
@@ -39,6 +39,9 @@
       },
       "package": "com.mrm0lten.IN42"
     },
+    "web": {
+      "bundler": "metro"
+    },
     "extra": {
       "eas": {
         "projectId": "3db51579-3df9-4f7d-b340-c3a0aa40600f"
