--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "expo-linking": "~6.2.2",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
-    "lightningcss-win32-x64-msvc": "^1.24.1",
+    "lightningcss": "^1.24.1",
     "lucide-react-native": "^0.364.0",
     "nativewind": "^4.0.1",
+    "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-css-interop": "^0.0.34",
