--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
+    "expo-navigation-bar": "~2.8.1",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "lightningcss": "^1.24.1",
