--- a/package.json
+++ b/package.json
@@ -51,11 +51,11 @@
     "react-native-svg": "14.1.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.1.3",
+    "uuid": "^9.0.1",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react-native": "^0.73.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
