--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/cli": "^0.10.13",
+    "@expo/cli": "^0.0.0",
+    "@expo/config-plugins": "~7.8.0",
     "@expo/ngrok": "^4.1.1",
-    "@react-native-community/datetimepicker": "^7.2.0",
-    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.4",
     "@react-navigation/elements": "^1.3.19",
@@ -22,27 +23,29 @@
     "@types/react": "~18.2.14",
     "cli": "^1.0.1",
     "dotenv": "^16.3.1",
-    "expo": "^49.0.23",
-    "expo-auth-session": "~5.0.2",
-    "expo-build-properties": "~0.8.3",
-    "expo-dev-client": "~2.4.13",
-    "expo-font": "~11.4.0",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-linking": "~5.0.2",
-    "expo-secure-store": "~12.3.1",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^50.0.14",
+    "expo-auth-session": "~5.4.0",
+    "expo-build-properties": "~0.11.1",
+    "expo-dev-client": "~3.3.11",
+    "expo-font": "~11.10.3",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-linking": "~6.2.2",
+    "expo-secure-store": "~12.8.1",
+    "expo-status-bar": "~1.11.1",
+    "node": "^18.20.1",
     "nvm": "0.0.4",
     "react": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "0.73.6",
     "react-native-dotenv": "^3.4.9",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-progress": "^5.0.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "typescript": "^5.1.3",
+    "uuid": "^9.0.1",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
