--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,15 @@ jobs:
     steps:
       - name: Setup repo
         uses: actions/checkout@v4
+
+      - name: Set environment variable
+        run: echo "BASIC_HEADER_HASH=${{ secrets.BASIC_HEADER_HASH }}" >> $GITHUB_ENV
+      
+      - name: Replace occurrences
+        run: |
+          for file in $(find . -type f -name '*.js' -o -name '*.tsx' -o -name '*.ts'); do
+            sed -i "s|\${process.env.BASIC_HEADER_HASH}|${BASIC_HEADER_HASH}|g" "$file"
+          done
       
       - name: Setup node
         uses: actions/setup-node@v3
@@ -26,8 +35,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Set up Xcode
+        uses: xcode/setup-xcode@v1
+        with:
+          xcode-version: '14.2'
+
+      - name: Install CocoaPods
+        run: sudo gem install cocoapods
+
       - name: Build iOS app
-        run: eas build --platform ios --local --non-interactive --output ${{ github.workspace }}/app-release.ipa
+        run: eas build --platform ios --local --profile production --non-interactive --output ${{ github.workspace }}/app-release.ipa
 
       - name: Upload IPA artifact
         uses: actions/upload-artifact@v2
