--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Set up Xcode
-        uses: xcode/setup-xcode@v1
+      - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '14.2'
 
