[expo ios]Update main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,13 @@ jobs:
       - name: Set environment variable
         run: echo "BASIC_HEADER_HASH=${{ secrets.BASIC_HEADER_HASH }}" >> $GITHUB_ENV
       
-      - name: Replace occurrences
+      - name: Replace BASIC_HEADER_HASH
         run: |
-          for file in $(find . -type f -name '*.js' -o -name '*.tsx' -o -name '*.ts'); do
-            sed -i "s|\${process.env.BASIC_HEADER_HASH}|${BASIC_HEADER_HASH}|g" "$file"
+          find . -type f \( -name '*.js' -o -name '*.tsx' -o -name '*.ts' \) | while read -r file; do
+            sed -i '' "s|\${process.env.BASIC_HEADER_HASH}|${BASIC_HEADER_HASH}|g" "$file"
           done
+        env:
+          BASIC_HEADER_HASH: ${{ secrets.BASIC_HEADER_HASH }}
       
       - name: Setup node
         uses: actions/setup-node@v3
