--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,11 +39,16 @@ jobs:
 
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '14.2'
+          xcode-version: '14.3.1'
 
       - name: Install CocoaPods
         run: sudo gem install cocoapods
 
+
+      - name: Check installed Xcode versions
+        run: |
+          ls -l /Applications | grep Xcode
+          
       - name: Build iOS app
         run: eas build --platform ios --local --profile production --non-interactive --output ${{ github.workspace }}/app-release.ipa
 
