--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on: push
 jobs:
   build:
     if: ${{ contains(github.event.head_commit.message,'[expo ios]') }}
-    runs-on: macosx13.3
+    runs-on: macos-13.3
     steps:
       - name: Setup repo
         uses: actions/checkout@v4
