temporarily adding configuration for ios devices to allow unsecure http requests

--- a/app.json
+++ b/app.json
@@ -30,7 +30,12 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.in42.IN42"
+      "bundleIdentifier": "com.in42.IN42",
+      "infoPlist": {
+        "NSAppTransportSecurity": {
+          "NSAllowsArbitraryLoads": true
+        }
+      }
     },
     "android": {
       "adaptiveIcon": {
