--- a/.github/workflows/IOS_Appstore.yml
+++ b/.github/workflows/IOS_Appstore.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   build:
-    if: ${{ contains(github.event.head_commit.message,'[expo ios]') }}
+    if: ${{ contains(github.event.head_commit.message,'[store]') || contains(github.event.head_commit.message,'[store ios]') }}
     runs-on: macos-13
     steps:
       - name: Setup repo
