--- a/.github/workflows/buildGooglePlayStore.yml
+++ b/.github/workflows/buildGooglePlayStore.yml
@@ -25,6 +25,15 @@ jobs:
       # - name: cat file
       #   run: cat ./Utilities/apiAuthorization.js
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '17'
+
+      - name: Verify Java version
+        run: java -version
+
       - name: 🏗 Setup Node
         uses: actions/setup-node@v3
         with:
