--- a/.github/workflows/buildGooglePlayStore.yml
+++ b/.github/workflows/buildGooglePlayStore.yml
@@ -1,8 +1,8 @@
 name: Build and Upload to Play Store
-on: push
-  # push:
-  #   branches-ignore: 
-  #     - "release" 
+on: 
+  push:
+    branches: 
+      - "release/**" 
     
 jobs: 
   Build:
