--- a/.github/workflows/Build_Android_Store.yml
+++ b/.github/workflows/Build_Android_Store.yml
@@ -66,7 +66,7 @@ jobs:
         uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJson: service_account.json
-          packageName: com.mrm0lten.IN42
+          packageName: com.in42.IN42
           releaseFiles: ./aab/in42.aab
           track: internal # will likely need to change in the future
           status: draft #note this will need to be changed later to completed or removed
