--- a/.github/workflows/Build_Android_Dev.yml
+++ b/.github/workflows/Build_Android_Dev.yml
@@ -7,7 +7,7 @@ on: push
 jobs: 
   Build:
     runs-on: ubuntu-latest
-    if: ${{ contains(github.event.head_commit.message,'[build all]') || contains(github.event.head_commit.message,'[build apk]')}}
+    if: ${{ contains(github.event.head_commit.message,'[apk]') || contains(github.event.head_commit.message,'[build apk]')}}
 
     steps:
       - name: 🏗 Setup repo
@@ -24,6 +24,12 @@ jobs:
 
       # - name: cat file
       #   run: cat ./Utilities/apiAuthorization.js
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '17'
 
       - name: 🏗 Setup Node
         uses: actions/setup-node@v3
