[apk]reverted initial changes to use unsecure data again

--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
         "expo-build-properties",
         {
           "android": {
-            // "usesCleartextTraffic": true
+            "usesCleartextTraffic": true
           },
           "ios": {}
         }
@@ -30,12 +30,12 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.in42.IN42"
-      // "infoPlist": {
-      //   "NSAppTransportSecurity": {
-      //     "NSAllowsArbitraryLoads": true
-      //   } 
-      // }
+      "bundleIdentifier": "com.in42.IN42",
+      "infoPlist": {
+        "NSAppTransportSecurity": {
+          "NSAllowsArbitraryLoads": true
+        } 
+      }
     },
     "android": {
       "adaptiveIcon": {
