--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
         "expo-build-properties",
         {
           "android": {
-            "usesCleartextTraffic": true
+            // "usesCleartextTraffic": true
           },
           "ios": {}
         }
@@ -31,11 +31,11 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.in42.IN42",
-      "infoPlist": {
-        "NSAppTransportSecurity": {
-          "NSAllowsArbitraryLoads": true
-        } 
-      }
+      // "infoPlist": {
+      //   "NSAppTransportSecurity": {
+      //     "NSAllowsArbitraryLoads": true
+      //   } 
+      // }
     },
     "android": {
       "adaptiveIcon": {
