--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/config-plugins": "^7.8.4",
     "@expo/metro-config": "^0.17.6",
     "@expo/prebuild-config": "^6.7.4",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
@@ -22,10 +23,10 @@
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.75",
     "cli": "^1.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "expo": "^50.0.15",
     "expo-auth-session": "~5.4.0",
-    "expo-build-properties": "~0.11.1",
     "expo-crypto": "^12.8.1",
     "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
@@ -54,8 +55,7 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.1.3",
     "uuid": "^9.0.1",
-    "zustand": "^4.4.1",
-    "@react-native-community/datetimepicker": "7.6.1"
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
