--- a/.github/workflows/Build_Android_Dev.yml
+++ b/.github/workflows/Build_Android_Dev.yml
@@ -15,12 +15,12 @@ jobs:
         
       - name: Set environment variable
         run: echo "BASIC_HEADER_HASH=${{ secrets.BASIC_HEADER_HASH }}" >> $GITHUB_ENV
-      
-      - name: Replace occurrences
-        run: |
-          for file in $(find . -type f -name '*.js' -o -name '*.tsx' -o -name '*.ts'); do
-            sed -i "s|\${process.env.BASIC_HEADER_HASH}|${BASIC_HEADER_HASH}|g" "$file"
-          done
+
+      # - name: Replace occurrences
+      #   run: |
+      #     for file in $(find . -type f -name '*.js' -o -name '*.tsx' -o -name '*.ts'); do
+      #       sed -i "s|\${process.env.BASIC_HEADER_HASH}|${BASIC_HEADER_HASH}|g" "$file"
+      #     done
 
       # - name: cat file
       #   run: cat ./Utilities/apiAuthorization.js
@@ -44,7 +44,10 @@ jobs:
 
       - name: 📦 Install dependencies
         run: yarn install
-
+        
+      - name: CD into frontend folder
+        run: cd ./frontend
+        
       - name: 🚀 Build app
         run: eas build -p android --profile preview --local --non-interactive --clear-cache --output "./apk/android-preview-build.apk"
         
