--- a/.github/workflows/Build_IOS_Store.yml
+++ b/.github/workflows/Build_IOS_Store.yml
@@ -19,13 +19,13 @@ jobs:
       - name: Set environment variable
         run: echo "BASIC_HEADER_HASH=${{ secrets.BASIC_HEADER_HASH }}" >> $GITHUB_ENV
       
-      - name: Replace BASIC_HEADER_HASH
-        run: |
-          find . -type f \( -name '*.js' -o -name '*.tsx' -o -name '*.ts' \) | while read -r file; do
-            sed -i '' "s|\${process.env.BASIC_HEADER_HASH}|${BASIC_HEADER_HASH}|g" "$file"
-          done
-        env:
-          BASIC_HEADER_HASH: ${{ secrets.BASIC_HEADER_HASH }}
+      # - name: Replace BASIC_HEADER_HASH
+      #   run: |
+      #     find . -type f \( -name '*.js' -o -name '*.tsx' -o -name '*.ts' \) | while read -r file; do
+      #       sed -i '' "s|\${process.env.BASIC_HEADER_HASH}|${BASIC_HEADER_HASH}|g" "$file"
+      #     done
+      #   env:
+      #     BASIC_HEADER_HASH: ${{ secrets.BASIC_HEADER_HASH }}
       
       - name: Setup node
         uses: actions/setup-node@v3
@@ -41,6 +41,7 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: frontend
 
       - uses: maxim-lobanov/setup-xcode@v1
         with:
@@ -56,6 +57,7 @@ jobs:
           
       - name: Build iOS app
         run: eas build --platform ios --local --profile production --non-interactive --output ${{ github.workspace }}/app-release.ipa
+        working-directory: frontend
 
       - name: Upload IPA artifact
         uses: actions/upload-artifact@v2
