[apk]Update Build_Android_Dev.yml

--- a/.github/workflows/Build_Android_Dev.yml
+++ b/.github/workflows/Build_Android_Dev.yml
@@ -57,3 +57,4 @@ jobs:
         with:
           name: buildArtifact
           path: ./apk/android-preview-build.apk
+          working-directory: frontend
