--- a/.github/workflows/Build_IOS_Store.yml
+++ b/.github/workflows/Build_IOS_Store.yml
@@ -37,7 +37,7 @@ jobs:
 
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '14.3.1'
+          xcode-version: latest-stable
 
       - name: Install CocoaPods
         run: sudo gem install cocoapods
