--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,7 +55,8 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.1.3",
     "uuid": "^9.0.1",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.1",
+    "expo-blur": "~12.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
