--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.4.5",
     "expo": "^50.0.15",
     "expo-auth-session": "~5.4.0",
+    "expo-blur": "~12.9.2",
     "expo-crypto": "^12.8.1",
     "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
@@ -37,7 +38,6 @@
     "expo-status-bar": "~1.11.1",
     "lightningcss": "^1.24.1",
     "lucide-react-native": "^0.364.0",
-    "nativewind": "^4.0.1",
     "nvm": "^0.0.4",
     "punycode": "^2.3.1",
     "react": "18.2.0",
@@ -52,11 +52,9 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "tailwindcss": "^3.4.3",
     "typescript": "^5.1.3",
     "uuid": "^9.0.1",
-    "zustand": "^4.4.1",
-    "expo-blur": "~12.9.2"
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
