--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "react-native-css-interop": "^0.0.34",
     "react-native-date-picker": "^5.0.1",
     "react-native-dotenv": "^3.4.11",
+    "react-native-exception-handler": "^2.10.10",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-progress": "^5.0.1",
