[apk] sheepish implemenentation of crash data

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -8,7 +8,7 @@ android:
 	./$(F_SETUP)/$(F_ANDROIDSTUDIO)/android-studio/bin/studio.sh
 
 start:
-	npx expo start
+	npx expo start --go
 
 tstart:
 	npx expo start --tunnel
