managed to send JS crash data to trello

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -14,7 +14,7 @@
     "scheme": "in42",
     "plugins": [
       ["expo-font", {}],
-      ["expo-secure-store", {}]
+      ["expo-secure-store", {}],
     ],
     "assetBundlePatterns": [
       "**/*"
