--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "expo": "^50.0.15",
     "expo-auth-session": "~5.4.0",
     "expo-blur": "~12.9.2",
+    "expo-build-properties": "~0.11.1",
     "expo-crypto": "^12.8.1",
     "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
