implemented i18next language translation package for more nuanced language translation

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@expo/config-plugins": "^7.8.4",
     "@expo/metro-config": "^0.17.6",
     "@expo/prebuild-config": "^6.7.4",
+    "@formatjs/intl-pluralrules": "^5.2.14",
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -37,11 +38,15 @@
     "expo-navigation-bar": "~2.8.1",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "lightningcss": "^1.24.1",
     "lucide-react-native": "^0.364.0",
     "nvm": "^0.0.4",
     "punycode": "^2.3.1",
     "react": "18.2.0",
+    "react-i18next": "^14.1.2",
     "react-native": "0.73.6",
     "react-native-css-interop": "^0.0.34",
     "react-native-date-picker": "^5.0.1",
