--- a/frontend/app.json
+++ b/frontend/app.json
@@ -13,8 +13,15 @@
     },
     "scheme": "in42",
     "plugins": [
-      ["expo-font", {}],
-      ["expo-secure-store", {}],
+      [
+        "expo-font",
+        {}
+      ],
+      [
+        "expo-secure-store",
+        {}
+      ],
+      "expo-build-properties"
     ],
     "assetBundlePatterns": [
       "**/*"
