--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
-    "@expo/config-plugins": "^7.8.4",
-    "@expo/metro-config": "^0.17.6",
-    "@expo/prebuild-config": "^6.7.4",
-    "@react-native-community/datetimepicker": "7.6.1",
-    "@react-native-masked-view/masked-view": "0.3.0",
+    "@expo/config-plugins": "~8.0.0",
+    "@expo/metro-config": "~0.18.11",
+    "@expo/prebuild-config": "^7.0.9",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-masked-view/masked-view": "0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/elements": "^1.3.30",
@@ -25,36 +25,36 @@
     "cli": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "expo": "^50.0.15",
-    "expo-auth-session": "~5.4.0",
-    "expo-blur": "~12.9.2",
-    "expo-build-properties": "~0.11.1",
-    "expo-crypto": "^12.8.1",
-    "expo-dev-client": "~3.3.11",
-    "expo-font": "~11.10.3",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-linking": "~6.2.2",
-    "expo-navigation-bar": "~2.8.1",
-    "expo-secure-store": "~12.8.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.38",
+    "expo-auth-session": "~5.5.2",
+    "expo-blur": "~13.0.2",
+    "expo-build-properties": "~0.12.5",
+    "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.28",
+    "expo-font": "~12.0.10",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-navigation-bar": "~3.0.7",
+    "expo-secure-store": "~13.0.2",
+    "expo-status-bar": "~1.12.1",
     "lightningcss": "^1.24.1",
     "lucide-react-native": "^0.364.0",
     "nvm": "^0.0.4",
     "punycode": "^2.3.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.5",
     "react-native-css-interop": "^0.0.34",
     "react-native-date-picker": "^5.0.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-exception-handler": "^2.10.10",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
-    "typescript": "^5.1.3",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "typescript": "~5.3.3",
     "uuid": "^9.0.1",
     "zustand": "^4.4.1"
   },
