--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/dev": "^0.2.3",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/config-plugins": "~8.0.0",
     "@expo/metro-config": "~0.18.11",
